--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
   "dependencies": {
     "ejs": "^3.1.10",
     "express": "^5.1.0",
-    "nodemon": "^3.1.11"
+    "nodemon": "^3.1.11",
+    "pm2": "^6.0.14"
   },
   "name": "driftsarkitektur",
   "version": "1.0.0",
   "main": "app.js",
-  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon app.js"
