--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "ejs": "^3.1.10",
     "express": "^5.1.0",
+    "mongoose": "^9.0.0",
     "nodemon": "^3.1.11",
     "pm2": "^6.0.14"
   },
